Move advanced goban theme settings to settings page; add stone removal graphic and size options

--- a/src/components/GobanThemePicker/GobanThemePicker.styl
+++ b/src/components/GobanThemePicker/GobanThemePicker.styl
@@ -32,9 +32,10 @@
     .theme-set, .custom-theme-set {
         display: inline-flex;
         flex-direction: row;
+        width: 320px;
         flex-wrap: wrap;
-        justify-content: center;
-        text-align: center;
+        justify-content: flex-start;
+        text-align: left;
         font-size: 10px;
 
         .selector {
@@ -104,4 +105,10 @@
             margin-left: 0.3rem;
         }
     }
+    
+}
+
+.LineText.customize {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
