Attempt to be clearer in the mod log that "acknowledgement" mean "we thanked this person for their report and they acked this".

--- a/src/views/User/ModLog.styl
+++ b/src/views/User/ModLog.styl
@@ -30,4 +30,11 @@
         white-space: pre-wrap;
         word-wrap: break-word;
     }
+
+    .acknowledgement-event {
+        themed background shade4;
+        color green;
+        font-size: smaller;
+        font-style: italic;
+    }
 }
