Added a highlighting style for canned warning action mod log entries

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -150,7 +150,7 @@ light.primary                           = #2480FF
 light.danger                            = #FFA600
 //light.success                           = #00C600
 light.success                           = #2AD131
-light.success                           = #32C738
+light.success                           = #32C738 // make up your mind? ;)
 //light.info                              = #A41EFF
 light.info                              = #C46EFF
 light.info                              = #C376FE  // make up your mind? ;)
