--- a/src/views/User/ModLog.styl
+++ b/src/views/User/ModLog.styl
@@ -32,9 +32,13 @@
     }
 
     .acknowledgement-event {
-        themed background shade4;
-        color green;
+        themed background shade5;
+        themed color success;
         font-size: smaller;
         font-style: italic;
+    }
+
+    .warning-event {
+        themed color danger;
     }
 }
