add warning-fg color to ogs.styl

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -167,6 +167,7 @@ light.chart-line                        = #184A6B
 light.error-boundary-bg                 = lighten(light.reject, 50%)
 light.error-boundary-fg                 = darken(light.reject, 50%)
 light.warning-bg                        = #FFAE2C
+light.warning-fg                        = #0051d3 // generated to contrast with warning-bg
 light.supporter-error-bg                = hsl(23, 100, 90);
 light.supporter-error-border            = hsl(23, 100, 80);
 
@@ -316,6 +317,7 @@ dark.chart-line                         = #329BE0
 dark.error-boundary-bg                  = darken(light.reject, 50%)
 dark.error-boundary-fg                  = lighten(light.reject, 50%)
 dark.warning-bg                         = #925A00
+dark.warning-fg                         = #6da5ff // generated to contrast with warning-bg
 dark.supporter-error-bg                 = hsl(23, 100, 10);
 dark.supporter-error-border             = hsl(23, 100, 30);
 
