Add per-feature sample boards to theme settings, refactor some settings

--- a/src/views/Settings/ThemePreferences.styl
+++ b/src/views/Settings/ThemePreferences.styl
@@ -33,4 +33,18 @@
     .small.board {
         padding-left: 0;
     }
+    
+    .MiniGoban.inline {
+        height: 1.5rem;
+        width: 10rem;
+        margin-left: 3rem;
+    }
+    
+    div.with-sample-goban {
+        .left {
+            display: inline-flex;
+            align-items: center;
+            width: 12rem;
+        }
+    }
 }
