Move CM's pie charts to CM Dashboard, and avoid refetching some dashboard data

--- a/src/views/ReportsCenter/ReportsCenterCMInfo.styl
+++ b/src/views/ReportsCenter/ReportsCenterCMInfo.styl
@@ -30,6 +30,11 @@
     .react-tabs__tab--disabled {
       display: none;
     }
+
+    .vote-activity-graph {
+        height: 200px;
+    }
+
 }
 
 
