Missed layout elements of GameLog refactor

--- a/src/views/Game/GameLog.styl
+++ b/src/views/Game/GameLog.styl
@@ -15,8 +15,18 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.GameLogModal.Modal {
-    width: 90vw;
-    min-width: 90vw;
-    max-width: 90vw;
+.GameLog {
+    td {
+        padding-right: 1rem;
+        border-bottom: 1px solid transparent;
+        themed border-bottom-color shade3
+    }
+
+    .timestamp {
+        width: 12rem;
+    }
+
+    .field {
+        margin-right: 1rem;
+    }
 }
