--- a/src/views/ReportsCenter/ReportsCenter.styl
+++ b/src/views/ReportsCenter/ReportsCenter.styl
@@ -160,7 +160,8 @@ reports_center_content_width=56rem
         themed background-color shade5
     }
 
-    .game-log {
+    // We have horizontal less room than `GameLog` expects
+    .GameLog {
         tr {
             vertical-align: top;
         }
