Tweak & customize auto-score entry layout further

--- a/src/views/Game/GameLog.styl
+++ b/src/views/Game/GameLog.styl
@@ -25,12 +25,15 @@
     .timestamp {
         width: 12rem;
     }
-
     .field {
         margin-right: 1rem;
     }
 
     .auto-score {
         themed background shade5;
+
+        a.Player, .game-log-player {
+            themed color shade1;
+        }
     }
 }
