Allow ReportGame to take as much width as it can, to deconflict chat and game log

--- a/src/views/ReportsCenter/ReportedGame.styl
+++ b/src/views/ReportsCenter/ReportedGame.styl
@@ -7,7 +7,10 @@
     justify-content: stretch;
     align-content: stretch;
     flex-wrap: wrap;
-    max-width: reports_center_content_width;
+
+    .reported-game h3 {
+        margin-bottom: 0;
+    }
 
     .reported-game-info {
         order: -1; // put this first so mobile layout is nice
