--- a/src/components/Player/Player.styl
+++ b/src/components/Player/Player.styl
@@ -40,6 +40,27 @@
         margin-left: 0.1rem;
     }
 
+    // On the ViewReport page, we support showing "reporter" and "reported"
+
+    #ViewReport & {
+        align-items: center;
+        &::after {
+            padding-left: 0.25rem;
+            width: 0.8rem;
+            font-family: 'FontAwesome';
+            font-size: 0.7rem;
+            content: "";
+        }
+        &.reported::after {
+            content: fa-exclamation-triangle-content;
+            themed color danger
+        }
+        &.reporter::after {
+            content: fa-bullhorn-content;
+            themed color supporter
+        }
+    }
+
     &.with-flare {
         align-items: baseline;  // if we have flare, then we don't have presence indicator, and it's better to line up the baselines (looks better in chat)
     }
