--- a/src/global_styl/font-awesome-hacks.styl
+++ b/src/global_styl/font-awesome-hacks.styl
@@ -20,4 +20,6 @@ fa-circle-content="\f111";
 fa-wrench-content="\f0ad";
 fa-sort-asc-content="\f0de";
 fa-sort-desc-content="\f0dd";
+fa-bullhorn-content="\f0a1";
+fa-exclamation-triangle-content="\f071";
 fa-graduation-cap="\f19d";
