Attempt to improve "acceptability" of "component provides a context for itself to be rendered in" "pattern".

--- a/src/components/Player/Player.styl
+++ b/src/components/Player/Player.styl
@@ -40,9 +40,8 @@
         margin-left: 0.1rem;
     }
 
-    // On the ViewReport page, we support showing "reporter" and "reported"
-
-    #ViewReport & {
+    // Styling to support the "ShowPlayersInReportContext" context that we provide
+    .show-players-in-report & {
         align-items: center;
         &::after {
             padding-left: 0.25rem;
