--- a/src/views/Game/PlayControls.styl
+++ b/src/views/Game/PlayControls.styl
@@ -177,6 +177,11 @@
         }
     }
 
+    .autoscoring-in-progress {
+        margin-top: 0.5rem;
+        font-size: 1.2rem;
+    }
+
     .score-square {
         display: inline-block;
         width: 0.7rem;
