Adjust spacing, and remove inpout outline on focus

--- a/src/components/PaginatedTable/PaginatedTable.styl
+++ b/src/components/PaginatedTable/PaginatedTable.styl
@@ -113,7 +113,9 @@
                 width: 2rem;
                 text-align: right;
                 border: 0;
+                margin-left: 0.25rem;
                 margin-right: 0.5rem;
+                outline: none;
                 //border-bottom: 1px solid;
                 //background-color: transparent;
                 //themed color fg
@@ -128,7 +130,7 @@
                 //font-size: 0.7em;
                 min-width: 0.8rem;
                 text-align: right;
-                margin-right: 0.5rem;
+                margin-right: 1rem;
             }
 
             .fa {
