--- a/src/components/PaginatedTable/PaginatedTable.styl
+++ b/src/components/PaginatedTable/PaginatedTable.styl
@@ -104,15 +104,18 @@
         margin-top: 1rem;
 
         .left {
-            display: inline-block;
+            display: flex;
             flex:1;
+            align-items: center;
             input {
                 //font-size: 0.7em;
                 padding: 0;
                 width: 2rem;
-                text-align: left;
+                text-align: right;
                 border: 0;
-                margin-left: 0.5rem;
+                margin-left: 0.25rem;
+                margin-right: 0.5rem;
+                outline: none;
                 //border-bottom: 1px solid;
                 //background-color: transparent;
                 //themed color fg
@@ -127,7 +130,7 @@
                 //font-size: 0.7em;
                 min-width: 0.8rem;
                 text-align: right;
-                margin-right: 0.5rem;
+                margin-right: 1rem;
             }
 
             .fa {
