Move javascript out of index.html. Import jQuery discretely.

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -495,7 +495,7 @@ nowrap()
 
 
 /* Sweetalert2 */
-@require '../node_modules/sweetalert2/dist/sweetalert2.css';
+//@require '../node_modules/sweetalert2/dist/sweetalert2.css';
 
 .swal2-footer {
     border: none !important; // default solid border is ugly
@@ -528,8 +528,8 @@ nowrap()
 @require "./views/[A-Z]*/*.styl";
 @require "./views/docs/*.styl";
 
-@require '../node_modules/react-table/react-table.css';
-@require '../node_modules/react-dynamic-help/dist/DynamicHelp.css';
+//@require '../node_modules/react-table/react-table.css';
+//@require '../node_modules/react-dynamic-help/dist/DynamicHelp.css';
 
 // @require '../node_modules/react-tabs/style/react-tabs.css';
 //
