Explain to users they need to register/sign in before playing

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -468,6 +468,20 @@
             }
         }
     }
+    
+    .anonymous-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        font-size: 1.3rem;
+        .Link {
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+        }
+    }
 }
 
 @media (max-width: hamburger-cutoff) {
