Difficulty Balancing -> Handicap terminology

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -493,6 +493,7 @@
         
         .ogs-react-select__group-heading {
             text-transform: none;
+            font-size: 0.9rem;
         }
         
         .option {
