Add Ireland provinces and Galacia to countries

--- a/src/global_styl/flags16.styl
+++ b/src/global_styl/flags16.styl
@@ -15,7 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.f16 .flag{display:inline-block;height:16px;width:16px;vertical-align:text-top;line-height:16px;background:url("https://cdn.online-go.com/assets/flags16.2022-10-27.png") no-repeat;}
+.f16 .flag{display:inline-block;height:16px;width:16px;vertical-align:text-top;line-height:16px;background:url("https://cdn.online-go.com/assets/flags16.2024-11-18.png") no-repeat;}
 .f16 ._African_Union{background-position:0 -16px;}
 .f16 ._Arab_League{background-position:0 -32px;}
 .f16 ._ASEAN{background-position:0 -48px;}
@@ -324,3 +324,9 @@
 .f16 ._Lord_Howe_Island{background-position:0 -4800px;}
 .f16 ._cat{background-position:0 -4816px;}
 .f16 ._LGBT{background-position:0 -4832px;}
+.f16 ._Ulster{background-position:0 -4880px;}
+.f16 ._Leinster{background-position:0 -4896px;}
+.f16 ._Munster{background-position:0 -4912px;}
+.f16 ._Connacht{background-position:0 -4928px;}
+.f16 ._Ireland_Provinces{background-position:0 -4944px;}
+.f16 ._Galicia{background-position:0 -4960px;}
