--- a/src/global_styl/flags32.styl
+++ b/src/global_styl/flags32.styl
@@ -15,7 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.f32 .flag{display:inline-block;height:32px;width:32px;vertical-align:text-top;line-height:32px;background:url("https://cdn.online-go.com/assets/flags32.2022-10-27.png") no-repeat;}
+.f32 .flag{display:inline-block;height:32px;width:32px;vertical-align:text-top;line-height:32px;background:url("https://cdn.online-go.com/assets/flags32.2024-11-18.png") no-repeat;}
 .f32 ._African_Union{background-position:0 -32px;}
 .f32 ._Arab_League{background-position:0 -64px;}
 .f32 ._ASEAN{background-position:0 -96px;}
@@ -325,3 +325,9 @@
 .f32 ._Lord_Howe_Island{background-position:0 -9600px;}
 .f32 ._cat{background-position:0 -9632px;}
 .f32 ._LGBT{background-position:0 -9664px;}
+.f32 ._Ulster{background-position:0 -9760px;}
+.f32 ._Leinster{background-position:0 -9792px;}
+.f32 ._Munster{background-position:0 -9824px;}
+.f32 ._Connacht{background-position:0 -9856px;}
+.f32 ._Ireland_Provinces{background-position:0 -9888px;}
+.f32 ._Galicia{background-position:0 -9920px;}
