--- a/src/views/Play/CustomGames.styl
+++ b/src/views/Play/CustomGames.styl
@@ -59,6 +59,8 @@
     }
 
 
+    // This shenanigans is needed to ensure that the canvas of the seek graph
+    // remains rendered, so we don't loose the reference we have to it.
     .seek-graph-container.hidden {
             clip-path: inset(0 100% 100% 0); /* Clip the entire element */
             position: absolute; /* Remove it from the layout */
@@ -70,12 +72,12 @@
             position: static; /* Return to normal layout */
         }
     }
-    
+
     .Modal {
         border: none;
         box-shadow: none;
     }
-    
+
     .ChallengeModal {
         width: 100%;
         max-height: unset;
