Add list of active automatch searches underneath the match making page

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -44,7 +44,7 @@
 }
 
 
-#FindGame {
+#QuickMatch {
     margin-top: 1rem;
     margin-right: 2rem;
     margin-left: 2rem;
@@ -542,7 +542,7 @@
 }
 
 @media (max-width: hamburger-cutoff) {
-    #FindGame {
+    #QuickMatch {
         display: flex;
         flex-direction: column;
         margin-right: 0rem;
