Highlight the CM action in mod logs, so CMs can "see at a glance" the important history

--- a/src/views/User/ModLog.styl
+++ b/src/views/User/ModLog.styl
@@ -38,6 +38,11 @@
         font-style: italic;
     }
 
+    .cm-action {
+        themed color danger;
+        float: right;
+    }
+
     .warning-event {
         themed color danger;
     }
