Re-integrate custom games back onto unified play page, toggle display behind Explore custom games button

--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -169,6 +169,18 @@
         }
 
     }
+
+    .custom-games-toggle-container {
+        margin-top: 2rem;
+        text-align: center;
+        margin-bottom: 8rem;
+        &.showing-custom-games {
+            margin-bottom: 1rem;
+        }
+    }
+    .custom-games-toggle {
+        font-size: 1.3rem;
+    }
 }
 
 
@@ -307,4 +319,5 @@
     .fa-times-circle-o {
         cursor: pointer;
     }
+
 }
