--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -538,6 +538,7 @@
             padding-left: 0.5rem;
         }
     }
+
     
 }
 
@@ -547,7 +548,6 @@
         flex-direction: column;
         margin-right: 0rem;
         margin-left: 0rem;
-        margin-bottom: 8rem;
         column-gap: 0rem;
         margin-top: 0rem;
 
@@ -573,6 +573,7 @@
         width: 100%;
         left: 0;
         right: 0;
+        z-index: z.dock;
         themed background-color bg
         .play-button {
             margin: 0;
