--- a/src/views/Play/CustomGames.styl
+++ b/src/views/Play/CustomGames.styl
@@ -22,6 +22,7 @@
     align-items: stretch;
     justify-content: center;
     box-sizing: border-box;
+    margin-bottom: 8rem;
 
     .header-container {
         width: 100%;
@@ -58,6 +59,17 @@
         }
     }
 
+    .create-custom-games-buttons {
+        display: flex;
+        gap: 1rem;
+        justify-content: space-between;
+        width: 100%;
+        
+        button {
+            height: 3rem;
+            font-size: 1.1rem;
+        }
+    }
 
     // This shenanigans is needed to ensure that the canvas of the seek graph
     // remains rendered, so we don't loose the reference we have to it.
