Add support for selecting multiple acceptable size/time settings

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -385,7 +385,7 @@
     }
     
     .speed-options {
-        margin-bottom: 2rem;
+        //margin-bottom: 2rem;
     }
     
     .opponent-options {
@@ -539,7 +539,14 @@
         }
     }
 
-    
+    .multiple-options-description {
+        font-size: 0.9rem;
+        font-style: italic;
+        themed color shade1
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
 }
 
 @media (max-width: hamburger-cutoff) {
