Made human rank range deltas instead of absolute ranks

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -452,8 +452,23 @@
             }
             
             .opponent-rank-range {
-                display: flex;
-                justify-content: space-around;
+                //display: flex;
+                text-align: center;
+                //justify-content: space-around;
+                select {
+                    text-align: center;
+                    margin-left: 0.5rem;
+                    margin-right: 0.5rem;
+                }
+            }
+
+            .opponent-rank-range-description {
+                font-size: 0.9rem;
+                themed color shade1
+                text-align: center;
+                padding-right: 0.5rem;
+                padding-left: 0.5rem;
+                margin-bottom: 0.5rem;
             }
 
             .computer-select {
@@ -547,6 +562,7 @@
         padding-left: 0.5rem;
         margin-bottom: 0.5rem;
     }
+    
 }
 
 @media (max-width: hamburger-cutoff) {
