Filter bots on the Play page based on their configs so bots listed will generally accept the challenges

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -552,6 +552,15 @@
             padding-right: 0.5rem;
             padding-left: 0.5rem;
         }
+        
+        
+        
+    }
+    
+    .option-label, .ogs-react-select__single-value {
+        display: flex !important;
+        align-items: center;
+        gap: 0.5rem;
     }
 
     .multiple-options-description {
@@ -561,6 +570,16 @@
         padding-right: 0.5rem;
         padding-left: 0.5rem;
         margin-bottom: 0.5rem;
+    }
+    
+    .computer-select {
+
+        > div {
+            width: 100%;
+        }
+        &.error {
+            border: 1px solid red;
+        }
     }
     
 }
