Bot list formatting

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -573,6 +573,17 @@
     }
     
     .computer-select {
+        .option-label {
+            display: flex;
+            justify-content: space-between;
+            gap: 0.5rem;
+
+            > span {
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+            }
+        }
 
         > div {
             width: 100%;
