Always show disabled bots, but show a description as to why they are disabled

--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -573,6 +573,10 @@
     }
     
     .computer-select {
+        .disabled .option-label {
+            themed color shade2
+        }
+
         .option-label {
             display: flex;
             justify-content: space-between;
