--- a/src/views/Play/QuickMatch.styl
+++ b/src/views/Play/QuickMatch.styl
@@ -591,6 +591,7 @@
 
         > div {
             width: 100%;
+            max-width: 12rem;
         }
         &.error {
             border: 1px solid red;
@@ -706,6 +707,11 @@
             .time-control-button {
                 min-width: 4rem !important;
             }
+        }
+    }
+    .computer-select {
+        > div {
+            max-width: auto;
         }
     }
     
