Add flag-small class for 32px flag downscaling

--- a/src/components/Flag/Flag.styl
+++ b/src/components/Flag/Flag.styl
@@ -16,10 +16,13 @@
  */
 
 
-.f16, .f32 {
+.f32 {
     .flag {
         vertical-align: middle;
         margin-bottom: 0.1em;
     }
+    &.flag-small {
+      transform: scale(0.5, 0.5);
+      margin: -8px -8px -8px -8px;
+    }
 }
-
