--- a/src/views/Play/CustomGames.styl
+++ b/src/views/Play/CustomGames.styl
@@ -15,8 +15,7 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
- 
- #CustomGames {
+#CustomGames {
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -35,16 +34,16 @@
         .header-title {
             margin: 0;
             font-size: 1.5em;
-            flex-grow: 1; 
+            flex-grow: 1;
         }
 
         .toggle-container {
-            cursor: pointer;                        
+            cursor: pointer;
             display: flex;
             align-items: center;
-            gap: 0.2em; 
-    
-            .toggle-indicator{
+            gap: 0.2em;
+
+            .toggle-indicator {
                 background: none;
                 border: none;
                 font-size: 0.8em;
@@ -54,28 +53,16 @@
 
             .toggle-label {
                 font-size: 0.9em;
-                color: #666; 
+                color: #666;
             }
-        }
-    }
-
-    .create-custom-games-buttons {
-        display: flex;
-        gap: 1rem;
-        justify-content: space-between;
-        width: 100%;
-        
-        button {
-            height: 3rem;
-            font-size: 1.1rem;
         }
     }
 
     // This shenanigans is needed to ensure that the canvas of the seek graph
     // remains rendered, so we don't loose the reference we have to it.
     .seek-graph-container.hidden {
-            clip-path: inset(0 100% 100% 0); /* Clip the entire element */
-            position: absolute; /* Remove it from the layout */
+        clip-path: inset(0 100% 100% 0); /* Clip the entire element */
+        position: absolute; /* Remove it from the layout */
     }
 
     .seek-graph-container.visible {
@@ -94,4 +81,21 @@
         width: 100%;
         max-height: unset;
     }
- }
+}
+
+.CustomGames--toggle-container {
+    margin-top: 2rem;
+    margin-bottom: 8rem;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+
+    &.showing-custom-games {
+        margin-bottom: 1rem;
+    }
+
+    button {
+        height: 3rem;
+        font-size: 1.3rem;
+    }
+}
